@@ -1,3 +1,9 @@
+2006-11-04  Darin Adler  <darin@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        * Scripts/webkitdirs.pm: Don't try to use the Xcode build setting if it's project-relative.
+
 2006-11-03  David Smith  <catfish.man@gmail.com>
 
         Reviewed by Tim H.
